tests/should_fail/use_after_try.fit
enum State { Fresh, Authed }

resource Conn<S> {
    sock: Socket,
    cleanup: force_close,
}

enum NetError { Refused }

fn auth(c: Conn<Fresh>, creds: Credentials) -> Result<Conn<Authed>, NetError>
fn send_data(c: Conn<Fresh>, data: String) -> Result<(), NetError>

fn test(c: Conn<Fresh>, creds: Credentials, data: String) -> Result<(), NetError> {
    let c2 = auth(c, creds)?
    send_data(c, data)?
    Ok(())
}
